Archive2/8c/2d5b14dc4df340/output
main.cpp: In function 'int main()':
main.cpp:7:12: error: unused variable 'x' [-Werror=unused-variable]
     auto&& x = lol{};
            ^
cc1plus: all warnings being treated as errors
